--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -19,7 +19,7 @@
 	                        .Where(w => w.Content.IsDocumentType("blockListDocumentType"));
 	    
     
-    
+    <p>@w.Content.IsDocumentType</p>
     long resultCount = results != null && results.Any() ? results.Count() : 0;
     <div class="searchresults">
         <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
