--- a/Views/MacroPartials/ResponsiveImage.cshtml
+++ b/Views/MacroPartials/ResponsiveImage.cshtml
@@ -1,1 +1,33 @@
 ﻿@inherits Umbraco.Web.Macros.PartialViewMacroPage
+@using Umbraco.Web.Models
+@using ContentModels = Umbraco.Web.PublishedModels;
+@{
+    var image = Umbraco.Media(Model.GetParameterValue<string>("image")) as ContentModels.Image;
+
+    var displayWidth = Model.GetParameterValue<int>("imageDisplayWidth", 0);
+    var displayWidthTablet = Model.GetParameterValue<int>("imageDisplayWidthTablet", 0);
+    var displayWidthPhone = Model.GetParameterValue<int>("imageDisplayWidthPhone", 0);
+
+    var alt = Model.GetParameterValue<string>("alt");
+    alt = alt == null ? string.Empty : string.Format("alt=\"{0}\"", alt);
+}
+<picture>
+    @if(displayWidthPhone > 0){
+        <source 
+            srcset="@Html.Raw(image.Url.GetCropUrl(width: displayWidthPhone))" 
+            media="(max-width: 480px)" 
+            sizes="@(displayWidthPhone)px" />
+    }
+    @if(displayWidthTablet > 0){
+        <source 
+            srcset="@Html.Raw(image.Url.GetCropUrl(width: displayWidthTablet))" 
+            media="(max-width: 768px)" 
+            sizes="@(displayWidthTablet)px" />
+    }
+    @if(displayWidth > 0){
+        <source 
+            srcset="@Html.Raw(image.Url.GetCropUrl(width: displayWidth))" 
+            sizes="@(displayWidth)px" />
+    }
+    <img src="@image.Url" @Html.Raw(alt) />
+</picture>
