--- a/Views/Partials/BlockList/Components/block.cshtml
+++ b/Views/Partials/BlockList/Components/block.cshtml
@@ -8,4 +8,23 @@
 <h1>@content.Value("Description")</h1>
     
 
+<picture>
+    <source type="image/webp"
+        srcset="/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=420&format=webp&quality=90 1x,/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=630&format=webp&quality=90 1.5x,/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=840&format=webp&quality=90 2x"
+        media="(max-width: 480px)" sizes="420px" />
+    <source
+        srcset="/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=420 1x,/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=630 1.5x,/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=840 2x"
+        media="(max-width: 480px)" sizes="420px" />
+    <source type="image/webp"
+        srcset="/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=720&format=webp&quality=90 1x,/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=1080&format=webp&quality=90 1.5x"
+        media="(max-width: 768px)" sizes="720px" />
+    <source
+        srcset="/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=720 1x,/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=1080 1.5x"
+        media="(max-width: 768px)" sizes="720px" />
+    <source type="image/webp" srcset="/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=960&format=webp&quality=90 1x"
+        sizes="960px" />
+    <source srcset="/media/bdpjq2s3/umbracologolarge.png?mode=pad&width=960 1x" sizes="960px" />
+    <img src="/media/bdpjq2s3/umbracologolarge.png" alt="Umbraco logo" />
+</picture>
+
 }
