--- a/Views/Partials/BlockList/Components/block.cshtml
+++ b/Views/Partials/BlockList/Components/block.cshtml
@@ -16,7 +16,7 @@ var content = (ContentModels.Block)Model.Content;
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Responsive Umbraco Logo image using picture</title>
+ @* <title>Responsive Umbraco Logo image using picture</title>*@
 </head>
 <body>
   <picture>
