--- a/Views/Partials/BlockList/Components/block.cshtml
+++ b/Views/Partials/BlockList/Components/block.cshtml
@@ -20,12 +20,12 @@ var content = (ContentModels.Block)Model.Content;
 </head>
 <body>
   <picture>
-    <source type="image/webp" srcset="/umbraco/assets/ResponsiveImages/ResponsiveUmbracoImages/master/UmbracoLogoExtraSmall.webp" media="(max-width: 270px)" sizes="270px" />
-    <source type="image/webp" srcset="/umbraco/assets/ResponsiveImages/UmbracoLogoSmall.webp" media="(max-width: 540px)" sizes="540px" />
-    <source type="image/webp" srcset="/umbraco/assets/ResponsiveImages/UmbracoLogoLarge.webp" sizes="1081px" />
-    <source srcset="/umbraco/assets/ResponsiveImages//UmbracoLogoExtraSmall.png" media="(max-width: 270px)" sizes="270px" />
-    <source srcset="/umbraco/assets/ResponsiveImages/UmbracoLogoSmall.png" media="(max-width: 540px)" sizes="540px" />
-    <source srcset="/umbraco/assets/ResponsiveImages/UmbracoLogoLarge.png" sizes="1081px" />
+    <source type="image/webp" srcset="~/umbraco/assets/ResponsiveImages/ResponsiveUmbracoImages/master/UmbracoLogoExtraSmall.webp" media="(max-width: 270px)" sizes="270px" />
+    <source type="image/webp" srcset="~/umbraco/assets/ResponsiveImages/UmbracoLogoSmall.webp" media="(max-width: 540px)" sizes="540px" />
+    <source type="image/webp" srcset="~/umbraco/assets/ResponsiveImages/UmbracoLogoLarge.webp" sizes="1081px" />
+    <source srcset="~/umbraco/assets/ResponsiveImages//UmbracoLogoExtraSmall.png" media="(max-width: 270px)" sizes="270px" />
+    <source srcset="~/umbraco/assets/ResponsiveImages/UmbracoLogoSmall.png" media="(max-width: 540px)" sizes="540px" />
+    <source srcset="~/umbraco/assets/ResponsiveImages/UmbracoLogoLarge.png" sizes="1081px" />
     <img src="~/umbraco/assets/ResponsiveImages/UmbracoLogoLarge.png" alt="Umbraco Logo" />
   </picture>
 </body>
