--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -7,7 +7,7 @@ var content = (ContentModels.Block5)Model.Content;
 
 var image = content.Value<IPublishedContent>("ExtraSmallImagePNG");
 
-<p>@image</p>
+<p>@image.Url</p>
     
 }
 
