--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -5,9 +5,9 @@
 
 var content = (ContentModels.Block5)Model.Content;
 
-var image = content.Value<IPublishedContent>("ExtraSmallImagePNG");
+var image = content.Value<IPublishedContent>("ExtraSmallImagePNG").Url;
 
-<p>@image.Url</p>
+<p>@image</p>
     
 }
 
