--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -5,8 +5,8 @@
 
 var content = (ContentModels.Block5)Model.Content;
 
-var ExtraSmallImage = content.Value("Description")
-var SmallImage =      content.Value("Description")
+var ExtraSmallImage = content.Value("Description");
+var SmallImage =      content.Value("Description");
 var LargeImage =      content.Value("Description");
     
 }
