--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -5,9 +5,9 @@
 
 var content = (ContentModels.Block5)Model.Content;
 
-var ExtraSmallImage = content.Value("Description");
-var SmallImage =      content.Value("Description");
-var LargeImage =      content.Value("Description");
+var ExtraSmallImage = content.Value("ExtraSmallImage");
+var SmallImage =      content.Value("ExtraSmallImage");
+var LargeImage =      content.Value("largeImage");
     
 }
 
