--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -9,10 +9,6 @@ var ExtraSmallImage = content.Value<IPublishedContent>("extraSmallImage");
 var SmallImage = content.Value<IPublishedContent>("smallImage"); 
 var LargeImage = content.Value<IPublishedContent>("largeImage"); 
 
-
-<p>@ExtraSmallImage.Url</p>
-<p>@SmallImage.Url</p>
-<p>@LargeImage.Url</p>
 }
 
 <!DOCTYPE html>
@@ -31,7 +27,7 @@ var LargeImage = content.Value<IPublishedContent>("largeImage");
     sizes="(max-width: 270px) 270px,
            (max-width: 540px) 540px,
            1081px"  
-    src="https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoLarge.png" 
+    src=@LargeImage 
     alt="Umbraco Logo" />
 </body>
 </html>
